2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/isatty.c: New file.
	* addon/newlib/libc/sys/hurd/Makefile.am (GENERAL_SOURCES): Add
	isatty.c.
	* Makefile.am (addon): Add newlib/libc/sys/hurd/isatty.c.

	* addon/newlib/libc/sys/hurd/sys/config.h (_LARGEFILE64_SOURCE):
	Don't define.
	(__LARGE64_FILES): Likewise.

	* addon/newlib/libc/sys/hurd/malloc.c: Include <sys/lock.h>
	(MLOCK_T): Define.
	(INITIAL_LOCK): Likewise.
	(ACQUIRE_LOCK): Likewise.
	(RELEASE_LOCK): Likewise.

	* addon/newlib/libc/sys/hurd/writer.c: Include <hurd/rm.h>.
	(_write_r): If FD is 1 or 2, then send the buffer to the console.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/malloc.c (HAVE_MREMAP): Define to 0.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/Makefile.am (GENERAL_SOURCES): Add
	lock.c.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am ($(srcdir)/newlib $(srcdir)/newlib-stamp): When
	extracting the tarball, remove the patch-applied stamps.
	($(addsuffix -applied,$(patch_files))): Depend on
	$(srcdir)/newlib, not $(srcdir)/newlib-stamp.

2008-01-22  Neal H. Walfield  <neal@gnu.org>

	* addon/newlib/libc/sys/hurd/Makefile.am: New file.
	* addon/newlib/libc/sys/hurd/aclocal.m4: Likewise.
	* addon/newlib/libc/sys/hurd/closer.c: Likewise.
	* addon/newlib/libc/sys/hurd/configure: Likewise.
	* addon/newlib/libc/sys/hurd/configure.ac: Likewise.
	* addon/newlib/libc/sys/hurd/crt0.c: Likewise.
	* addon/newlib/libc/sys/hurd/fcntlr.c: Likewise.
	* addon/newlib/libc/sys/hurd/fstatr.c: Likewise.
	* addon/newlib/libc/sys/hurd/getreent.c: Likewise.
	* addon/newlib/libc/sys/hurd/gettimeofdayr.c: Likewise.
	* addon/newlib/libc/sys/hurd/linkr.c: Likewise.
	* addon/newlib/libc/sys/hurd/lock.c: Likewise.
	* addon/newlib/libc/sys/hurd/lseekr.c: Likewise.
	* addon/newlib/libc/sys/hurd/malloc.c: Likewise.
	* addon/newlib/libc/sys/hurd/mallocr.c: Likewise.
	* addon/newlib/libc/sys/hurd/openr.c: Likewise.